# ai-simulator

./: .gitignore
Phase 1/: CONFIG_FIELD_DEFINITIONS.md  PHASE1_BACKBONE.md
Phase 1/backend/: .env.example  README.md  phase1.db  pyproject.toml
Phase 1/backend/app/: __init__.py  main.py
Phase 1/backend/app/api/routes/: health.py  simulator.py
Phase 1/backend/app/core/: config.py
Phase 1/backend/app/db/: models.py  session.py
Phase 1/backend/app/schemas/: __init__.py  advisors.py  scenario.py  sessions.py
Phase 1/backend/app/services/: advisors.py  scenarios.py  simulator.py
Phase 1/backend/tests/api/: test_health.py  test_simulator.py
Phase 1/configs/advisors/: drifter.yaml  situation_analyst.yaml
Phase 1/configs/scenarios/: cisco_product_launch.yaml
Phase 1/database/docs/: schema-notes.md
Phase 2/: DIRECTORY_MAP.md  README.md  docker-compose.yml
Phase 2/backend/: .env.example  README.md  SCORING_ARCHITECTURE.md  pyproject.toml
Phase 2/backend/app/: main.py
Phase 2/configs/advisors/: decision_synthesizer.yaml  drifter.yaml  guardrail_auditor.yaml  predictor.yaml  (+1 more)
Phase 2/frontend/: README.md  SIMULATION_ARCHITECTURE.md  index.html  package-lock.json  package.json
Phase 3/: LLM_ARCHITECTURE.md  PHASE3_ARCHITECTURE.md  PHASE3_BACKEND_REVIEW.md  README.md
Phase 3/backend/: .env.cloud-dev.example  .env.dev.example  .env.prod.example  .env.save  .gitignore  README.md  pyproject.toml
Phase 3/docs/: team-local-testing-guide.md
Phase 3/frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
(+210 files in other folders)
